--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "kaprekar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A keprekar iteration calculator.",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "tsc",
     "test" : "npm run build && node build/test.js",
     "start": "npm run build && node build/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Davide Visco",
   "license": "ISC"
 }
